Fixed dashes in page titles (my fault) and neatened book page
Em dashes I copied from Word into Textpad weren't displaing - replaced with standard hyphen for the mo.
Standardised 24px margin between cards and changed background of chapter preview to standard card border (dragon image wasn't loading and then made text hard to read when I tried to make it work)

--- a/css/bourke-style.css
+++ b/css/bourke-style.css
@@ -41,7 +41,7 @@ html {
 .blurb {
   display: flex;
   align-content: center;
-  margin: 2% auto 10%;
+  margin: 2% auto;
   padding: 20px;
 }
 
@@ -134,8 +134,8 @@ img {
 
 #book-first-chapter {
   width: 80%;
-  margin: 10px auto auto auto;
-  background-image: url(dragon-fade.png);
+  margin: 24px auto auto auto;
+  //background-image: url(../images/dragon-fade.png);
   padding: 50px;
 }
 
