--- a/css/kevin.css
+++ b/css/kevin.css
@@ -1,3 +1,25 @@
+.press-quotes {
+  margin: 0;
+  list-style: none;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.press-quotes blockquote {
+  width: 300px;
+  flex-basis: auto;
+  flex-grow: 0;
+  flex-shrink: 0;
+  margin-bottom: 30px;
+  margin: 0 15px 30px;
+}
+
+.press-quotes > h2 {
+width: 100%;
+}
+
 #events-html {
   margin: 0;
   list-style: none;
