--- a/css/ui-kit.css
+++ b/css/ui-kit.css
@@ -201,7 +201,7 @@ header h1 {
 
 footer {
   display: block;
-  margin-top: 20px;
+  margin-top: 24px;
   margin-left: 0px;
   margin-right: 0px;
   margin-bottom: 0px;
